--- a/views/admin-show-staff-list.ejs
+++ b/views/admin-show-staff-list.ejs
@@ -35,9 +35,9 @@
 
                     <td>
                       <% if (shipper.status == 'done') {%>
-                      <i class="fa fa-circle-o text-success mr-2"><%= shipper.status %></i>
+                      <i class="text-success mr-2"><%= shipper.status %></i>
                       <% } else { %>
-                      <i class="fa fa-circle-o text-danger mr-2"><%= shipper.status %></i>
+                      <i class="text-danger mr-2"><%= shipper.status %></i>
                       <% } %>
                     </td>
                   </tr>
