--- a/views/client-index.ejs
+++ b/views/client-index.ejs
@@ -38,7 +38,7 @@
               <div class="content">
                 <div class="price"><%= food.price %></div>
                 <p><%= food.description %></p>
-                <a href="/buy/<%= food._id %>" class="btn btn-block btn-warning btn-lg text-white"
+                <a href="#" class="btn btn-block btn-warning btn-lg text-white"
                   ><h4>Order now</h4></a
                 >
               </div>
