--- a/views/admin-drinks.ejs
+++ b/views/admin-drinks.ejs
@@ -2,10 +2,10 @@
             Content body start
 ***********************************-->
 <style>
-  .col-3 img {
+  .col-md-3 img {
     width: 100%;
     height: 15vh;
-    object-fit: cover;
+    object-fit: contain;
   }
 </style>
 <div class="content-body pt-3">
@@ -13,18 +13,18 @@
   <div class="container-fluid">
     <div class="row justify-content-center">
       <% if (drinks != '') { %> <% drinks.forEach(function(drink, index){ %>
-      <div class="col-6">
+      <div class="col-md-6">
         <div class="card">
           <div class="card-body">
             <div class="row rounded">
-              <div class="col-3">
+              <div class="col-md-3">
                 <img
                   class="img-fluid img-responsive rounded product-image"
                   id="product"
                   src="<%= drink.image_url%>"
                 />
               </div>
-              <div class="col-6 border-left mt-1">
+              <div class="col-md-6 border-left mt-1">
                 <h3><%= drink.name %></h3>
                 <div class="mt-1 mb-1 spec-1"><h5>Type: <%= drink.type %></h5></div>
                 <p class="text-justify para mb-0 text-truncate">
