--- a/views/admin-foods.ejs
+++ b/views/admin-foods.ejs
@@ -2,10 +2,10 @@
             Content body start
 ***********************************-->
 <style>
-  .col-3 img {
+  .col-md-3 img {
     width: 100%;
     height: 15vh;
-    object-fit: cover;
+    object-fit: contain;
   }
 </style>
 <div class="content-body pt-3">
