Increse products in cart

--- a/views/client-drinks.ejs
+++ b/views/client-drinks.ejs
@@ -17,26 +17,15 @@
           <div class="card-body">
             <div class="row rounded justify-content-center">
               <h1>
-                OUR <strong><span class="text-warning">FOODS</span></strong>
+                OUR <strong><span class="text-warning">DRINKS</span></strong>
               </h1>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <% if (infoObj != '') { %>
-    <div class="col-12 alert alert-success alert-dismissible">
-      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-      <h3><%= infoObj %></h3>
-    </div>
-    <% } %> <% if (infoErrorsObj != '') { %>
-    <div class="col-12 alert alert-danger alert-dismissible">
-      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-      <h3><%= infoErrorsObj %></h3>
-    </div>
-    <% } %>
     <div class="row justify-content-center">
-      <% if (foods != '') { %> <% foods.forEach(function(food, index){ %>
+      <% if (drinks != '') { %> <% drinks.forEach(function(drink, index){ %>
       <div class="col-md-6">
         <div class="card mt-4">
           <div class="card-body">
@@ -45,25 +34,29 @@
                 <img
                   class="img-fluid img-responsive rounded product-image"
                   id="product"
-                  src="<%= food.image_url%>"
+                  src="<%= drink.image_url%>"
                 />
               </div>
               <div class="col-6 border-left mt-1">
-                <h2><%= food.name %></h2>
-                <div class="mt-1 mb-1 spec-1"><h3>Type: <%= food.type %></h3></div>
+                <h2><%= drink.name %></h2>
+                <div class="mt-1 mb-1 spec-1"><h3>Type: <%= drink.type %></h3></div>
                 <p class="text-justify h3 para mb-0 text-truncate">
-                  Description: <%= food.description%>
+                  Description: <%= drink.description%>
                 </p>
               </div>
               <div class="align-items-center align-content-center col-md-3 border-left mt-1">
                 <div class="d-flex flex-row">
-                  <h2 class="mr-1"><%= food.price %> VND</h2>
+                  <h2 class="mr-1"><%= drink.price %> VND</h2>
                 </div>
                 <div class="d-flex flex-column mt-4">
-                  <!-- <a href="/admin-update-food/<%= food._id %>" class="btn btn-warning btn-sm"
+                  <!-- <a href="/admin-update-drink/<%= drink._id %>" class="btn btn-warning btn-sm"
                       >Update</a
                     > -->
-                  <form action="/add-cart/<%= food._id %>" method="POST" class="d-flex flex-column">
+                  <form
+                    action="/add-cart/<%= drink._id %>"
+                    method="POST"
+                    class="d-flex flex-column"
+                  >
                     <button class="btn btn-outline-danger btn-lg mt-2" type="submit">
                       <h4>Add to cart</h4>
                     </button>
@@ -78,12 +71,14 @@
       <% }) %> <% } else { %>
       <h4>No item found</h4>
       <% } %>
-      <div class="col-2">
+    </div>
+    <div class="row d-flex justify-content-center pt-5 pb-5">
+      <div class="col-md-2">
         <a href="/client" type="submit" class="btn btn-primary text d-flex justify-content-center"
           ><h3>Go to homepage</h3></a
         >
       </div>
-      <div class="col-2">
+      <div class="col-md-2">
         <a href="/cart" type="submit" class="btn btn-primary text d-flex justify-content-center"
           ><h3>Go to cart</h3></a
         >
