--- a/views/must-login.ejs
+++ b/views/must-login.ejs
@@ -6,8 +6,17 @@
     <div class="col-12 text-center mt-xl-2">
       <h2 class="text-warning font-weight-bold">Chưa đăng nhập !</h2>
       <h2 class="font-weight-light">Bạn phải đăng nhập để có thể mua sản phẩm</h2>
-      <div class="col-12 text-center mt-xl-2">
-        <a class="text-danger font-weight-medium" href="/"><h3>Back to home</h3></a>
+      <div class="row justify-content-center">
+        <div class="col-12 pt-5 pb-5">
+          <div class="row justify-content-center">
+            <div class="col-6 text-right">
+              <a class="btn btn-danger" href="/"><h3>Go To Home Page?</h3></a>
+            </div>
+            <div class="col-6 text-left">
+              <a class="btn btn-primary" href="/login"><h3>Login Now!!!</h3></a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
