complete cart page

--- a/views/client-cart.ejs
+++ b/views/client-cart.ejs
@@ -68,7 +68,7 @@
                     />
                   </form>
                   <a
-                    href="/remove-cart/<%= cart.product_obj[index].product_id %>"
+                    href="/remove-cart/<%= cart.product_obj[index].product_id %>/<%= cart._id %>"
                     class="btn btn-outline-danger btn-md mt-2"
                     type="submit"
                   >
