--- a/views/client-cart.ejs
+++ b/views/client-cart.ejs
@@ -103,7 +103,9 @@
             <a class="btn btn-danger" href="/client"><h3>Continute to Shopping!!</h3></a>
           </div>
           <div class="col-4 text-left">
-            <a class="btn btn-primary" href="/pay"><h3>Make a payment</h3></a>
+            <a class="btn btn-primary" href="/create-invoice/<%= cart._id %>"
+              ><h3>Make the invoice</h3></a
+            >
           </div>
         </div>
       </div>
