--- a/views/layouts/client.ejs
+++ b/views/layouts/client.ejs
@@ -54,9 +54,9 @@
       <nav class="navbar border-warning">
         <a href="/client">Home</a>
         <a href="/client-about">About</a>
-        <a href="/client-drinks">Drinks</a>
-        <a href="/client-foods">Foods</a>
-        <a href="/client-contact">Contact</a>
+        <a href="/drinks">Drinks</a>
+        <a href="/foods">Foods</a>
+        <a href="/contact">Contact</a>
       </nav>
     </header>
 
@@ -134,10 +134,10 @@
                     <a href="#"><h4>Give your feedback</h4></a>
                   </li>
                   <li>
-                    <a href="#"><h4>Foods</h4></a>
+                    <a href="/foods"><h4>Foods</h4></a>
                   </li>
                   <li>
-                    <a href="#"><h4>Drinks</h4></a>
+                    <a href="/drinks"><h4>Drinks</h4></a>
                   </li>
                 </ul>
               </div>
