--- a/views/client-foods.ejs
+++ b/views/client-foods.ejs
@@ -37,42 +37,49 @@
     <% } %>
     <div class="row justify-content-center">
       <% if (foods != '') { %> <% foods.forEach(function(food, index){ %>
-      <div class="col-md-6">
-        <div class="card mt-4">
-          <div class="card-body">
-            <div class="row rounded">
-              <div class="col-3">
-                <img
-                  class="img-fluid img-responsive rounded product-image"
-                  id="product"
-                  src="<%= food.image_url%>"
-                />
-              </div>
-              <div class="col-6 border-left mt-1">
-                <h2><%= food.name %></h2>
-                <div class="mt-1 mb-1 spec-1"><h3>Type: <%= food.type %></h3></div>
-                <p class="text-justify h3 para mb-0 text-truncate">
-                  Description: <%= food.description%>
-                </p>
-              </div>
-              <div class="align-items-center align-content-center col-md-3 border-left mt-1">
-                <div class="d-flex flex-row">
-                  <h2 class="mr-1"><%= food.price %> VND</h2>
+
+      <div class="col-md-6 category__link">
+        <a style="text-decoration: none" href="/client-product/<%= food._id %>"
+          ><div class="card mt-4">
+            <div class="card-body">
+              <div class="row rounded">
+                <div class="col-3">
+                  <img
+                    class="img-fluid img-responsive rounded product-image"
+                    id="product"
+                    src="<%= food.image_url%>"
+                  />
                 </div>
-                <div class="d-flex flex-column mt-4">
-                  <!-- <a href="/admin-update-food/<%= food._id %>" class="btn btn-warning btn-sm"
+                <div class="col-6 border-left mt-1">
+                  <h2><%= food.name %></h2>
+                  <div class="mt-1 mb-1 spec-1"><h3>Type: <%= food.type %></h3></div>
+                  <p class="text-justify h3 para mb-0 text-truncate">
+                    Description: <%= food.description%>
+                  </p>
+                </div>
+                <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+                  <div class="d-flex flex-row">
+                    <h2 class="mr-1"><%= food.price %> VND</h2>
+                  </div>
+                  <div class="d-flex flex-column mt-4">
+                    <!-- <a href="/admin-update-food/<%= food._id %>" class="btn btn-warning btn-sm"
                       >Update</a
                     > -->
-                  <form action="/add-cart/<%= food._id %>" method="POST" class="d-flex flex-column">
-                    <button class="btn btn-outline-danger btn-lg mt-2" type="submit">
-                      <h4>Add to cart</h4>
-                    </button>
-                  </form>
+                    <form
+                      action="/add-cart/<%= food._id %>"
+                      method="POST"
+                      class="d-flex flex-column"
+                    >
+                      <button class="btn btn-outline-danger btn-lg mt-2" type="submit">
+                        <h4>Add to cart</h4>
+                      </button>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
+          </div></a
+        >
       </div>
 
       <% }) %> <% } else { %>
