--- a/views/client-product.ejs
+++ b/views/client-product.ejs
@@ -25,7 +25,7 @@
       <%= data.description %>
     </div>
     <div class="row">
-      <div class="col-6">
+      <div class="col-12">
         <form action="/add-cart/<%= data._id %>" method="post">
           <button class="btn btn-block btn-warning btn-md text-white m-0" type="submit">
             <strong class="h3"
@@ -34,13 +34,13 @@
           </button>
         </form>
       </div>
-      <div class="col-6">
+      <!-- <div class="col-6">
         <form action="/add-cart/<%= data._id %>" method="post">
           <button class="btn btn-block btn-warning btn-md text-white m-0">
             <strong class="h3"><span class="fas fa-utensils"></span> Buy now</strong>
           </button>
         </form>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
