--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -1,54 +1,125 @@
-<div class="container-scroller bg-white" style="height: 60em">
-  <div
-    class="auth-form-light text-left py-5 px-4 px-sm-5"
-    style="margin: 15% 30% 10% 30%; background-color: #eee"
-  >
-    <% if (infoLoginObj != '') { %>
-    <div class="col-12 alert alert-success alert-dismissible">
-      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-      <h3><%= infoLoginObj %></h3>
-    </div>
-    <% } %> <% if (infoErrorsObj != '') { %>
-    <div class="col-12 alert alert-danger alert-dismissible">
-      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-      <h3><%= infoErrorsObj %></h3>
-    </div>
-    <% } %>
-    <div class="col-12 mt-xl-1">
-      <!-- <h2>Email: <%= data.email %></h2>
-      <h2>Name: <%= data.name %></h2>
-      <h2>Gender: <%= data.gender %></h2>
-      <h2>Address: <%= data.address %></h2> -->
-      <table class="align-items-center">
-        <tr>
-          <td>
-            <img
-              class="align-items-center align-content-center col-md-11 border-left mt-1"
-              src="./img/1.jpg"
-              width="128"
-              height="128"
-              alt=""
-            />
-          </td>
-          <td>
-            <H2 class="text-warning">Name: <%= data.name%></H2>
-            <H3 class="sdt">Phone: <%= data.tel %></H3>
-            <H3 class="diachi">Address: <%= data.address %></H3>
-            <H3 class="gioitinh">Gender: <%= data.gender %></H3>
-          </td>
-        </tr>
-      </table>
-      <!-- Dưới cái dòng này chỗ này -->
+<div class="content-body pt-3">
+  <!-- row -->
+  <div class="container-fluid" style="margin-top: 5%">
+    <div class="row justify-content-center">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-body">
+            <div class="row">
+              <% if (infoLoginObj != '') { %>
+              <div class="col-12 alert alert-success alert-dismissible">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <h3><%= infoLoginObj %></h3>
+              </div>
+              <% } %> <% if (infoObj != '') { %>
+              <div class="col-12 alert alert-success alert-dismissible">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <h3><%= infoObj %></h3>
+              </div>
+              <% } %> <% if (infoErrorsObj != '') { %>
+              <div class="col-12 alert alert-danger alert-dismissible">
+                <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                <h3><%= infoErrorsObj %></h3>
+              </div>
+              <% } %>
+            </div>
+            <div class="row rounded">
+              <div class="col-5 p-4" style="background-color: rgb(255, 237, 136)">
+                <div class="row justify-content-center text-center">
+                  <div class="col-12">
+                    <H2 class="text-warning">Name: <%= data.name%></H2>
+                  </div>
+                  <div class="col-12">
+                    <H3 class="ten">Address: <%= data.address %></H3>
+                  </div>
+                  <div class="col-12">
+                    <H3 class="ten">Phone: <%= data.tel %></H3>
+                  </div>
+                  <div class="col-12">
+                    <H3 class="ten">Gender: <%= data.gender %></H3>
+                  </div>
+                </div>
+                <!-- Dưới cái dòng này chỗ này -->
 
-      <div class="row mt-4">
-        <div class="col-8 text-center">
-          <a class="btn btn-danger" href="/client"><h3>Go Shopping Now !!!</h3></a>
-        </div>
-        <div class="col-4 text-left">
-          <a class="btn btn-primary" href="/login"><h3>Log Out</h3></a>
+                <div class="row">
+                  <div class="col-8 text-center">
+                    <a class="btn btn-danger" href="/client"><h3>Go Shopping Now !!!</h3></a>
+                  </div>
+                  <div class="col-4 text-left">
+                    <a class="btn btn-primary" href="/login"><h3>Log Out</h3></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-7 p-4" style="background-color: rgb(255, 237, 136)">
+                <h3>History invoice</h3>
+                <table class="table table-striped table-bordered border-primary">
+                  <tr>
+                    <th style="width: 10%"><h4>STT</h4></th>
+                    <th style="width: 50%"><h4>Invocie ID</h4></th>
+                    <th style="width: 30%"><h4>Total</h4></th>
+                    <th style="width: 10%"><h4>For more</h4></th>
+                  </tr>
+                  <%if(invoices != null){ for(let i in invoices ){ %> <% if(invoices[i].status ==
+                  4){ %>
+                  <tr class="text-success">
+                    <td><h4><%= parseInt(i) + 1 %></h4></td>
+                    <td><h4><%= invoices[i]._id %></h4></td>
+                    <td><h4><%= invoices[i].value %></h4></td>
+                    <td>
+                      <h4><a href="/invoice/<%= invoices[i]._id %>">view</a></h4>
+                    </td>
+                  </tr>
+                  <% } else if (invoices[i].status == 3){ %>
+                  <tr class="text-warning">
+                    <td><h4><%= parseInt(i) + 1 %></h4></td>
+                    <td><h4><%= invoices[i]._id %></h4></td>
+                    <td><h4><%= invoices[i].value %></h4></td>
+                    <td>
+                      <h4><a href="/invoice/<%= invoices[i]._id %>">view</a></h4>
+                    </td>
+                  </tr>
+                  <% } else if (invoices[i].status == 2){ %>
+                  <tr class="text-info">
+                    <td><h4><%= parseInt(i) + 1 %></h4></td>
+                    <td><h4><%= invoices[i]._id %></h4></td>
+                    <td><h4><%= invoices[i].value %></h4></td>
+                    <td>
+                      <h4><a href="/invoice/<%= invoices[i]._id %>">view</a></h4>
+                    </td>
+                  </tr>
+                  <% } else if (invoices[i].status == 1){ %>
+                  <tr class="text-black">
+                    <td><h4><%= parseInt(i) + 1 %></h4></td>
+                    <td><h4><%= invoices[i]._id %></h4></td>
+                    <td><h4><%= invoices[i].value %></h4></td>
+                    <td>
+                      <h4><a href="/invoice/<%= invoices[i]._id %>">view</a></h4>
+                    </td>
+                  </tr>
+                  <% } else { %>
+                  <tr class="text-danger" style="text-decoration: line-through">
+                    <td><h4><%= parseInt(i) + 1 %></h4></td>
+                    <td><h4><%= invoices[i]._id %></h4></td>
+                    <td><h4><%= invoices[i].value %></h4></td>
+                    <td>
+                      <h4>
+                        <a
+                          href="/invoice/<%= invoices[i]._id %>"
+                          style="cursor: not-allowed; pointer-events: none"
+                          >view</a
+                        >
+                      </h4>
+                    </td>
+                  </tr>
+                  <% } %> <% }} else { %>
+                  <H2>status</H2>
+                  <% } %>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <!-- content-wrapper ends -->
   </div>
 </div>
