admin view invoices list

--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -102,11 +102,16 @@
             </li>
             <li>
               <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                <span class="nav-text">Receipts</span>
+                <span class="nav-text">Invoices</span>
               </a>
               <ul aria-expanded="false">
-                <li><a href="/today-receipts">Today Receipts</a></li>
-                <li><a href="/all-receipts">All Receipts</a></li>
+                <li><a href="/admin-today-invoices">Today Invoices</a></li>
+                <li><a href="/admin-ordered-invoices">Ordered Invoices</a></li>
+                <li><a href="/admin-confirmed-invoices">Confirmed Invoices</a></li>
+                <li><a href="/admin-got-invoices">Got Invoices</a></li>
+                <li><a href="/admin-done-invoices">Done Invoices</a></li>
+                <li><a href="/admin-canceled-invoices">Canceled</a></li>
+                <li><a href="/admin-all-invoices">All Invoices</a></li>
               </ul>
             </li>
             <li>
