admin view specific invoice

--- a/views/admin-invoices.ejs
+++ b/views/admin-invoices.ejs
@@ -75,11 +75,7 @@
                   <td><h4 class="text-danger"><%= invoices[i].value %></h4></td>
                   <td>
                     <h4>
-                      <a
-                        href="/admin-view-invoice/<%= invoices[i]._id %>"
-                        style="cursor: not-allowed; pointer-events: none"
-                        >view</a
-                      >
+                      <a href="/admin-view-invoice/<%= invoices[i]._id %>">view</a>
                     </h4>
                   </td>
                 </tr>
